[package]
name = "limne"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
eframe = {version = "0.31.1", features = ["wayland", "x11", "wgpu", "default_fonts"], default-features = false}
egui = { version = "0.31.1", features = ["persistence"] }
egui-wgpu = { version = "0.31.1", features = ["wayland", "x11"] }
env_logger = "0.11.7"
log = "0.4.27"
rand = "0.9.0"
rayon = "1.10.0"
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
wgpu = "24.0.1"


[[bin]]
name = "amnis"
path = "amnis/debug.rs"

[build-dependencies]
cc = "1.2.22"